package edu.hitsz.aircraft;

public class ElitePlusEnemy extends EnemyAircraft {

    public ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }
}
