package edu.hitsz.interface_;

public interface Crashable {
}
