@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + vanish():void
    + notValid():boolean
}

abstract class AbstractAircraft
{
    # maxHp:int
    # hp:int

    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int add):void
    + getHp():int
    + getMaxHp():int
    + isAlive():boolean
    + {abstract} shoot()
}

abstract class EnemyAircraft
{
    - shootStrategy:ShootStrategy
    - defeatRewardGranted:boolean

    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + setShootStrategy(ShootStrategy shootStrategy):void
    + grantDefeatReward():boolean
    + forward():void
    + shoot()
}

class HeroAircraft
{
    - power:int
    - freezeDuration:int
    - homingDuration:int
    - dodgeDuration:int
    - dodgeCooldown:int
    - scatterShootDuration:int
    - circleShootDuration:int
    - shootStrategy:ShootStrategy
    - {static} instance:HeroAircraft

    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + {static} resetInstance():void
    + forward():void
    + shoot()
}

class MobEnemy
{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteEnemy
{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class ElitePlusEnemy
{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteProEnemy
{
    + EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class BossEnemy
{
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

abstract class BaseBullet
{
    - power:int

    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet
{
    - homing:boolean

    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power, boolean homing)
    + isHoming():boolean
    + trackTarget(AbstractAircraft target):void
}

class EnemyBullet
{
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

abstract class AbstractSupply
{
    + AbstractSupply(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} effect(HeroAircraft heroAircraft, Game game):void
}

class BloodSupply
{
    + BloodSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, Game game):void
}

class BombSupply
{
    + BombSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, Game game):void
}

class FireSupply
{
    + FireSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, Game game):void
}

class FirePlusSupply
{
    + FirePlusSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, Game game):void
}

class FreezeSupply
{
    + FreezeSupply(int locationX, int locationY, int speedX, int speedY)
    + effect(HeroAircraft heroAircraft, Game game):void
}

abstract class EnemyFactory
{
    + {abstract} createEnemy(int locationX, int locationY, int speedX, int speedY, int hp):EnemyAircraft
}

class MobEnemyFactory
class EliteEnemyFactory
class ElitePlusEnemyFactory
class EliteProEnemyFactory
class BossEnemyFactory

interface ShootStrategy
class NoShootStrategy
class DirectShootStrategy
class ParallelShootStrategy
class ScatterShootStrategy
class CircleShootStrategy

interface Crashable

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractSupply

AbstractAircraft <|-- EnemyAircraft
AbstractAircraft <|-- HeroAircraft
EnemyAircraft <|-- MobEnemy
EnemyAircraft <|-- EliteEnemy
EnemyAircraft <|-- ElitePlusEnemy
EnemyAircraft <|-- EliteProEnemy
EnemyAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractSupply <|-- BloodSupply
AbstractSupply <|-- BombSupply
AbstractSupply <|-- FireSupply
AbstractSupply <|-- FirePlusSupply
AbstractSupply <|-- FreezeSupply

EnemyFactory <|-- MobEnemyFactory
EnemyFactory <|-- EliteEnemyFactory
EnemyFactory <|-- ElitePlusEnemyFactory
EnemyFactory <|-- EliteProEnemyFactory
EnemyFactory <|-- BossEnemyFactory

ShootStrategy <|.. NoShootStrategy
ShootStrategy <|.. DirectShootStrategy
ShootStrategy <|.. ParallelShootStrategy
ShootStrategy <|.. ScatterShootStrategy
ShootStrategy <|.. CircleShootStrategy

Crashable <|.. HeroAircraft

@enduml
